feat: add new service to obtan adult customers
