# src/main/java/com/clientes/cuentas/demo/domain/port/output/CustomerRepository.java
@@ -13,14 +13,14 @@ public interface CustomerRepository {
   /**
    * Retrieves all customers together with their associated bank accounts.
    *
-   * <p>
-   * The underlying JPA query returns a flat result set where each row represents
-   * a combination of a customer and one of their bank accounts. Therefore, a
-   * customer with multiple accounts will appear in multiple rows.
-   * </p>
-   *
-   * @return a list of {@link Customer} domain objects, each containing the list
-   * of associated {@link BankAccount}.
+   * @return a list of {@link Customer} domain objects, each containing the list of associated {@link BankAccount}.
    */
   List<Customer> getCustomersAndAccounts();
+
+  /**
+   * Retrieves all the adults customers (>= 18 years old).
+   *
+   * @return a list of {@link Customer} domain objects
+   */
+  List<Customer> getAdultCustomers();
 }
