# src/main/java/com/clientes/cuentas/demo/infrastructure/api/delegate/CustomersApiDelegateImpl.java
@@ -1,9 +1,11 @@
 package com.clientes.cuentas.demo.infrastructure.api.delegate;
 
+import com.clientes.cuentas.demo.application.port.input.GetAdultCustomersUseCase;
 import com.clientes.cuentas.demo.application.port.input.GetCustomersUseCase;
 import com.clientes.cuentas.demo.infrastructure.api.mapper.CustomerApiMapper;
 import com.clientes.cuentas.demo.infrastructure.input.api.ClientesApiDelegate;
 import com.clientes.cuentas.demo.infrastructure.input.dto.CustomerAccountDTO;
+import com.clientes.cuentas.demo.infrastructure.input.dto.CustomerDTO;
 import io.micrometer.core.annotation.Timed;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -21,7 +23,9 @@ import java.util.List;
 public class CustomersApiDelegateImpl implements ClientesApiDelegate {
 
   private final GetCustomersUseCase getCustomersUseCase;
-  private final CustomerApiMapper customerApiMapper;
+  private final GetAdultCustomersUseCase getAdultCustomersUseCase;
+
+  private final CustomerApiMapper mapper;
 
   @Override
   @Timed(value = "customer.usecase.getCustomersAndAccounts",
@@ -30,8 +34,20 @@ public class CustomersApiDelegateImpl implements ClientesApiDelegate {
     log.info("- Init - getCustomersAndAccounts()");
     var customers = getCustomersUseCase.getCustomersAndAccounts();
 
-    var response = customerApiMapper.toCustomerAccountDtoList(customers);
+    var response = mapper.toCustomerAccountDtoList(customers);
     log.info("- End - getCustomersAndAccounts()");
+    return ResponseEntity.ok(response);
+  }
+
+  @Override
+  @Timed(value = "customer.usecase.getAdultCustomers",
+          description = "Time spent executing getAdultCustomers use case.")
+  public ResponseEntity<List<CustomerDTO>> getAdultCustomers() {
+    log.info("- Init - getAdultCustomers()");
+    var customers = getAdultCustomersUseCase.getAdultCustomers();
+
+    var response = mapper.toCustomerDtoList(customers);
+    log.info("- End - getAdultCustomers()");
     return ResponseEntity.ok(response);
   }
 }
